fix: fix text-line-breaks in chat

--- a/client/projects/chat/src/app/chat/open-chat/open-chat.component.scss
+++ b/client/projects/chat/src/app/chat/open-chat/open-chat.component.scss
@@ -28,6 +28,8 @@
 .user-message-card, .friend-message-card {
   display: inline-block;
   margin-bottom: 1em;
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .user-message-card {
